--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "hypothesis-api",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "A library for easily working with the Hypothes.is API.",
   "main": "hypothesis.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/JakeHartnell/hypothesis-node-api"
   },
   "author": "JakeHartnell",
   "license": "MIT",
